--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.dll
 *.so
 *.dylib
+main
 
 # Test binary, built with `go test -c`
 *.test
@@ -11,21 +12,17 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Module specific
 *.pprof
 *.log
 
-# Certificates
+# General
 /certs/*
 !/certs/.gitkeep
-
-# Configuration files
 /config/*
-!/config/example-conf.yml
+!config/.gitkeep
+!/config/example_conf.yml
 
-# Executables
-/main
-
-# Visual Studio Code settings
+# Misc
+*.swp
 /.vscode
